// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot render accepts descendant prop 1`] = `
Array [
  <View
    style={
      Object {
        "borderLeftColor": "gainsboro",
        "borderLeftWidth": 2,
        "height": 16,
        "marginStart": 16,
      }
    }
  />,
  <View
    style={
      Object {
        "borderColor": "gainsboro",
        "borderRadius": 8,
        "borderWidth": 1,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "rgb(246, 248, 250)",
            "borderBottomColor": "gainsboro",
            "borderBottomWidth": 1,
            "borderTopLeftRadius": 8,
            "borderTopRightRadius": 8,
            "height": 48,
            "paddingStart": 16,
          },
          Object {
            "flexDirection": "row",
          },
        ]
      }
    >
      <Image
        source={
          Object {
            "uri": "path_to_avatar.png",
          }
        }
        style={
          Object {
            "borderRadius": 12,
            "height": 24,
            "width": 24,
          }
        }
      />
      <Text
        style={
          Array [
            Object {
              "fontSize": 17,
              "fontWeight": "500",
            },
            Object {
              "marginStart": 8,
            },
          ]
        }
      >
        johndoe110
        <Text
          style={
            Object {
              "fontWeight": "400",
            }
          }
        >
           on Feb 15, 2021
        </Text>
      </Text>
    </View>
    <View
      style={
        Object {
          "borderBottomColor": "gainsboro",
          "borderBottomWidth": 1,
          "padding": 8,
        }
      }
    >
      <Text
        style={
          Object {
            "fontSize": 15,
            "fontWeight": "400",
          }
        }
      >
        default body
      </Text>
    </View>
    <View
      style={
        Object {
          "height": 32,
          "justifyContent": "center",
          "paddingStart": 8,
        }
      }
    >
      <SvgMock />
    </View>
  </View>,
]
`;

exports[`snapshot render correctly with given data 1`] = `
<View
  style={
    Object {
      "borderColor": "gainsboro",
      "borderRadius": 8,
      "borderWidth": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "rgb(246, 248, 250)",
          "borderBottomColor": "gainsboro",
          "borderBottomWidth": 1,
          "borderTopLeftRadius": 8,
          "borderTopRightRadius": 8,
          "height": 48,
          "paddingStart": 16,
        },
        Object {
          "flexDirection": "row",
        },
      ]
    }
  >
    <Image
      source={
        Object {
          "uri": "path_to_avatar.png",
        }
      }
      style={
        Object {
          "borderRadius": 12,
          "height": 24,
          "width": 24,
        }
      }
    />
    <Text
      style={
        Array [
          Object {
            "fontSize": 17,
            "fontWeight": "500",
          },
          Object {
            "marginStart": 8,
          },
        ]
      }
    >
      johndoe110
      <Text
        style={
          Object {
            "fontWeight": "400",
          }
        }
      >
         on Feb 15, 2021
      </Text>
    </Text>
  </View>
  <View
    style={
      Object {
        "borderBottomColor": "gainsboro",
        "borderBottomWidth": 1,
        "padding": 8,
      }
    }
  >
    <Text
      style={
        Object {
          "fontSize": 15,
          "fontWeight": "400",
        }
      }
    >
      default body
    </Text>
  </View>
  <View
    style={
      Object {
        "height": 32,
        "justifyContent": "center",
        "paddingStart": 8,
      }
    }
  >
    <SvgMock />
  </View>
</View>
`;

exports[`snapshot renders correctly with no data 1`] = `
<View
  style={
    Object {
      "borderColor": "gainsboro",
      "borderRadius": 8,
      "borderWidth": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "rgb(246, 248, 250)",
          "borderBottomColor": "gainsboro",
          "borderBottomWidth": 1,
          "borderTopLeftRadius": 8,
          "borderTopRightRadius": 8,
          "height": 48,
          "paddingStart": 16,
        },
        Object {
          "flexDirection": "row",
        },
      ]
    }
  >
    <Image
      source={
        Object {
          "uri": undefined,
        }
      }
      style={
        Object {
          "borderRadius": 12,
          "height": 24,
          "width": 24,
        }
      }
    />
    <Text
      style={
        Array [
          Object {
            "fontSize": 17,
            "fontWeight": "500",
          },
          Object {
            "marginStart": 8,
          },
        ]
      }
    >
      <Text
        style={
          Object {
            "fontWeight": "400",
          }
        }
      >
         on Feb 19, 2021
      </Text>
    </Text>
  </View>
  <View
    style={
      Object {
        "borderBottomColor": "gainsboro",
        "borderBottomWidth": 1,
        "padding": 8,
      }
    }
  >
    <Text
      style={
        Object {
          "fontSize": 15,
          "fontWeight": "400",
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "height": 32,
        "justifyContent": "center",
        "paddingStart": 8,
      }
    }
  >
    <SvgMock />
  </View>
</View>
`;
